--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyB-k6SCQ5cEOserxkBH0l-UcYhJQlR6BLU" />
 
         <activity
             android:name=".MapsActivity"
